# byr-helper

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  AuthContext.tsx  main.tsx
src-tauri/: Cargo.toml  example.txt  tauri.conf.json
src-tauri/bupt_api/: Cargo.toml
src-tauri/bupt_api/src/: bupt_auth.rs  jwxt_api.rs  lib.rs
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/interface/: bupt_api.rs  bupt_auth.rs  jwxt_api.rs  mod.rs
src-tauri/src/process/: assignment.rs  mod.rs  notifications.rs  todolist.rs
src/components/: alert.tsx  card.tsx  list.tsx  login.tsx  table.tsx
src/pages/: app_page.tsx  course_detail_page.tsx  course_page.tsx  course_sechdule_page.tsx  home_page.tsx  login_page.tsx  notification_page.tsx
