[package]
name = "bupt_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
flate2 = "1.0.35"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
